@@ -9,6 +9,8 @@ git-annex (8.20200331) UNRELEASED; urgency=medium
   * Fix a potential failure to parse git config.
   * Support boolean git configs that are represented by the name of the
     setting with no value, eg "core.bare" is the same as "core.bare = true".
+  * When parsing git configs, support all the documented ways to write
+    true and false, including "yes", "on", "1", etc.
 
  -- Joey Hess <id@joeyh.name>  Mon, 30 Mar 2020 15:58:34 -0400
 
